# Hasher

./: CMakeLists.txt  hash.cpp  hash.h  main.cpp  mediaprocessor.cpp  mediaprocessor.h  video.cpp  video.h
models/: duplicatemanager.cpp  duplicatemanager.h  hash.h  image.cpp  image.h  mediaprocessor.cpp  mediaprocessor.h  video.cpp  video.h
widgets/: comparisonwidget.cpp  comparisonwidget.h  emptywidget.cpp  emptywidget.h  loadingwidget.cpp  loadingwidget.h  summarywidget.cpp  summarywidget.h  videobar.cpp  videobar.h
windows/: mainwindow.cpp  mainwindow.h
